Fader: fix some layout bugs in default template        fix scrolling behavior in Chrome

--- a/toolkit/templates/default/css/fader.css
+++ b/toolkit/templates/default/css/fader.css
@@ -7,6 +7,8 @@ div.toolkit-fader {
     user-select: none;
     display: inline-block;
     margin: 4px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 div.toolkit-fader.toolkit-vertical {
@@ -20,25 +22,50 @@ div.toolkit-fader.toolkit-horizontal {
 div.toolkit-fader.toolkit-vertical .toolkit-background-top-left,
 div.toolkit-fader.toolkit-vertical .toolkit-background-center,
 div.toolkit-fader.toolkit-vertical .toolkit-background-bottom-right {
-    z-index: 2;
+    z-index: 0;
+    width: 100%;
 }
 
-div.toolkit-fader.toolkit-vertical .toolkit-background-top-left {
-    background: url(../images/fader/background_top.png) no-repeat;
-    width: 100%;
+div.toolkit-fader .toolkit-background-top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+div.toolkit-fader .toolkit-background-bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+div.toolkit-fader.toolkit-vertical .toolkit-background-top-left{
+    background: url(../images/fader/background_top.png) no-repeat 0 0;
     height: 40px;
 }
 div.toolkit-fader.toolkit-vertical .toolkit-background-center {
-    background: url(../images/fader/background_vertical_center.png) repeat-y;
-    width: 100%;
+    background: url(../images/fader/background_vertical_center.png) repeat-y 0% 0%;
+    position: absolute;
+    top: 40px;
+    bottom: 40px;
+    left: 0;
+    right: 0;
 }
 div.toolkit-fader.toolkit-vertical .toolkit-background-bottom-right {
     background: url(../images/fader/background_bottom.png) no-repeat 0 100%;
-    width: 100%;
     height: 40px;
 }
 
+div.toolkit-fader.toolkit-right .toolkit-background-top-left {
+    background-position: 100% 0%;
+}
+div.toolkit-fader.toolkit-right .toolkit-background-center {
+    background-position: 100% 0%;
+}
+div.toolkit-fader.toolkit-right .toolkit-background-bottom-right {
+    background-position: 100% 100%;
+}
+
 div.toolkit-fader .toolkit-handle {
+    position: absolute;
     cursor: pointer;
     cursor: hand;
     z-index: 3;
